# ft_projects

ft_ls/: Makefile
ft_ls/include/: ft_ls.h
ft_ls/libft/: Makefile
ft_ls/libft/include/: libft.h
ft_ls/libft/src/: ft_atoi.c  ft_bzero.c  ft_char.c  ft_freetab.c  ft_memccpy.c  ft_memmove.c  ft_pow.c  ft_printf_branch_csp.c  ft_printf_branch_duxo.c  ft_printf_put_du.c  ft_printf_put_p.c  ft_printf_put_x.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_substr.c  join_newstr.c
ft_ls/src/: ft_ls.c  options.c  print.c  print_l.c  utils.c
ft_malloc/: Makefile  run.sh
ft_malloc/include/: ft_malloc.h  libft.h
ft_malloc/libft/: Makefile
ft_malloc/libft/include/: ft_list.h  ft_rbt.h  libft.h
ft_malloc/libft/src/: ft_list.c  ft_memchr.c  ft_memcpy.c  ft_memset.c  ft_printf.c  ft_printf_put_o.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_rbt.c  ft_split.c  ft_strdel.c  ft_strdup.c  ft_strjoinf.c  ft_strmapi.c  ft_strncpy.c  ft_strtrim.c
ft_malloc/malloc/: Makefile
ft_malloc/malloc/bk/: malloc.h  malloc.txt
ft_malloc/malloc/bk2/: malloc.c  malloc.h
ft_malloc/malloc/bk4/: malloc.c  malloc.h
ft_malloc/malloc/bk5/: malloc.c  malloc.h
ft_malloc/malloc/src/: libft.c  malloc.c  teste.c
ft_malloc/src/: calloc.c  free.c  internal.c  internal.h  libft.c  malloc.c  realloc.c  show_alloc.c  show_alloc_mem.c
ft_malloc/test/: Makefile  teste  teste.c
ft_malloc/test2/: Makefile  teste  teste.c
ft_malloc/testcpp/: Makefile  main  main.cpp
ft_nm/: Makefile  README.md  ft_nm
ft_nm/include/: ft_nm.h
ft_nm/libft/src/: ft_calloc.c  ft_cast.c  ft_isprint.c  ft_memcmp.c  ft_printf_flagger.c  ft_printf_put_c.c  ft_printf_put_s.c  ft_putchar.c  ft_skip.c  ft_space.c  ft_strcmp.c  ft_strlcpy.c  ft_strnew.c  ft_strnstr.c  get_next_line.c
ft_nm/src/: format_output.c  ft_debug.c  ft_error.c  ft_nm_x32.c  ft_nm_x64.c  ft_shared.c  ft_sorting.c  main.c
ft_nm/test/: run_test.sh
libftpp/: .gitignore  CMakeLists.txt
libftpp/libftpp/: CMakeLists.txt
libftpp/libftpp/include/: client.hpp  data_buffer.hpp  data_structures.hpp  design_patterns.hpp  libftpp.hpp  memento.hpp  message.hpp  network.hpp  observer.hpp  persistent_worker.hpp  pool.hpp  server.hpp  singleton.hpp  state_machine.hpp  thread.hpp  thread_safe_iostream.hpp  thread_safe_queue.hpp  threading.hpp  worker_pool.hpp
libftpp/libftpp/src/: Utils.cpp  Utils.hpp  client.cpp  data_buffer.cpp  memento.cpp  message.cpp  persistent_worker.cpp  server.cpp  thread.cpp  thread_safe_iostream.cpp  worker_pool.cpp
libftpp/main_client/: CMakeLists.txt
libftpp/main_client/src/: main_client.cpp
libftpp/main_data_buffer/: CMakeLists.txt
libftpp/main_data_buffer/src/: main_data_buffer.cpp
libftpp/main_memento/: CMakeLists.txt
libftpp/main_memento/src/: main_memento.cpp
libftpp/main_observer/: CMakeLists.txt
libftpp/main_observer/src/: main_observer.cpp
libftpp/main_persistent_worker/: CMakeLists.txt
libftpp/main_persistent_worker/src/: main_persistant_worker.cpp
libftpp/main_pool/: CMakeLists.txt
libftpp/main_pool/src/: main_pool.cpp
libftpp/main_server/: CMakeLists.txt
libftpp/main_server/src/: main_server.cpp
libftpp/main_singleton/: CMakeLists.txt
libftpp/main_singleton/src/: main_singleton.cpp
libftpp/main_state_machine/: CMakeLists.txt
libftpp/main_state_machine/src/: main_state_machine.cpp
libftpp/main_thread/: CMakeLists.txt
libftpp/main_thread/src/: main_thread.cpp
libftpp/main_thread_safe/: CMakeLists.txt
libftpp/main_thread_safe/src/: main_thread_safe_iostream.cpp
libftpp/main_thread_safe_queue/: CMakeLists.txt
libftpp/main_thread_safe_queue/src/: main_thread_safe_queue.cpp
libftpp/main_worker_pool/: CMakeLists.txt
libftpp/main_worker_pool/src/: main_worker_pool.cpp
libftpp/tests/: main_server.cpp
